tests/feature_tests/snapshots/e2e__feature_tests__system_node__Bash.snap
---
source: tests/feature_tests/mod.rs
expression: "&source.trim()"
---
set -e
shopt -s expand_aliases

eval "$(fnm env)"
fnm install 10
fnm use 10
fnm use system
if [ "$(node -v)" != "custom node" ]; then
    echo 'Expected Node version to be "custom node", Got: '"$(node -v)"
    exit 1
fi
